# envoyai

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 00_two_liner.py  01_hello_world.py  02_multi_provider.py  03_failover.py  04_canary.py  05_streaming.py  06_tool_use.py  07_embeddings.py  08_vision.py  09_async.py  10_custom_retry.py  11_budget_per_team.py  12_model_alias.py  13_local_openai_compat.py  14_privacy.py  15_handling_errors.py  README.md  a_sdk_mode.py
examples/b_proxy_mode/: README.md  client_curl.sh  client_python.py  server.py
src/envoyai/: __init__.py  __main__.py  errors.py  gateway.py  policy.py
src/envoyai/_internal/: __init__.py  aigw_bootstrap.py  aigw_process.py  calls.py  catalog.py  dispatch.py  runtime.py  singleton.py
src/envoyai/_internal/prices/: README.md  __init__.py  openai-2026-01-01.json
src/envoyai/_internal/render/: __init__.py  aigw_standalone.py
src/envoyai/auth/: __init__.py  aws.py  azure.py  gcp.py
src/envoyai/providers/: __init__.py  anthropic.py  base.py  bedrock.py  cohere.py  gcp.py  openai.py
tests/: test_aigw_bootstrap.py  test_aigw_integration.py  test_aigw_renderer.py  test_gateway_local.py  test_module_level_complete.py  test_no_module_state.py  test_public_api.py  test_sdk_and_proxy_methods.py
