[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envoyai"
version = "0.0.1"
description = "Python SDK for Envoy AI Gateway — define, run, and deploy AI gateways without YAML or Kubernetes CRDs."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Envoy AI Gateway contributors" }]
keywords = ["envoy", "ai", "llm", "gateway", "openai", "anthropic", "bedrock", "azure-openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
    'eval_type_backport; python_version < "3.10"',
]

[project.optional-dependencies]
client = ["openai>=1.40"]
admin = ["fastapi>=0.110", "uvicorn>=0.27", "sse-starlette>=2.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML",
]

[project.scripts]
envoyai = "envoyai.__main__:main"

[project.urls]
Homepage = "https://github.com/botengyao/envoyai"
Repository = "https://github.com/botengyao/envoyai"
Issues = "https://github.com/botengyao/envoyai/issues"
"AI Gateway" = "https://github.com/envoyproxy/ai-gateway"

[tool.hatch.build.targets.wheel]
packages = ["src/envoyai"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
